--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ docs/_build/
 
 # PyBuilder
 target/
+*.pyc
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -93,6 +94,7 @@ ipython_config.py
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
+wpg_engine/config/__pycache__/*
 
 # Celery stuff
 celerybeat-schedule
