--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ DB_ECHO=false
 # Telegram bot settings
 TG_TOKEN=your_telegram_bot_token_here
 TG_WEBHOOK_URL=https://your-domain.com/webhook
+TG_ADMIN_ID=your_telegram_admin_id_here
 
 # VK bot settings
 VK_TOKEN=your_vk_bot_token_here
