🔐 Secure deployment setup
- Add secure deployment templates and setup script
- Remove sensitive deployment scripts from Git tracking
- Update .gitignore to protect tokens and credentials
- Add comprehensive security documentation

Files added:
- scripts/setup-deployment.sh - Creates secure deployment scripts
- scripts/*.template.sh - Safe templates without real credentials
- SECURE_DEPLOYMENT_GUIDE.md - Security-focused deployment guide

Files removed from tracking:
- scripts/quick-deploy.sh - Contains real tokens (now local only)
- scripts/setup-server.sh - Contains server IDs (now local only)

--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,30 @@ logs/
 # Temporary files
 tmp/
 temp/
+
+# Security - sensitive files
+.env.*
+!.env.example
+*.key
+*.pem
+*.crt
+*.p12
+*.pfx
+secrets/
+credentials/
+
+# Deployment scripts with embedded secrets (exclude templates and setup)
+scripts/*deploy*.sh
+!scripts/*.template.sh
+!scripts/setup-deployment.sh
+scripts/setup-server.sh
+
+# Backup files
+*.bak
+*.backup
+*.old
+
+# Runtime data
+data/
+logs/
+backups/
