--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,8 +119,8 @@ jobs:
         docker stop $CONTAINER_NAME || true
         docker rm $CONTAINER_NAME || true
         
-        # Create directories
-        mkdir -p /opt/wpg-engine/data /opt/wpg-engine/logs
+        # Create directories with sudo
+        sudo mkdir -p /opt/wpg-engine/data /opt/wpg-engine/logs
         
         # Login to Yandex Container Registry
         echo "Logging in to Yandex Container Registry..."
@@ -134,8 +134,8 @@ jobs:
         WPGBOT_GID=$(docker run --rm $IMAGE_URL id -g wpgbot 2>/dev/null || echo "999")
         
         echo "Setting permissions for wpgbot user (UID: $WPGBOT_UID, GID: $WPGBOT_GID)"
-        chown -R $WPGBOT_UID:$WPGBOT_GID /opt/wpg-engine/data /opt/wpg-engine/logs
-        chmod -R 755 /opt/wpg-engine/data /opt/wpg-engine/logs
+        sudo chown -R $WPGBOT_UID:$WPGBOT_GID /opt/wpg-engine/data /opt/wpg-engine/logs
+        sudo chmod -R 755 /opt/wpg-engine/data /opt/wpg-engine/logs
         
         # Run new container
         docker run -d \
