--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -119,9 +119,6 @@ jobs:
         docker stop $CONTAINER_NAME || true
         docker rm $CONTAINER_NAME || true
         
-        # Create directories with sudo
-        sudo mkdir -p /opt/wpg-engine/data /opt/wpg-engine/logs
-        
         # Login to Yandex Container Registry
         echo "Logging in to Yandex Container Registry..."
         echo '${{ secrets.YC_SA_JSON_CREDENTIALS }}' | docker login --username json_key --password-stdin ${{ env.REGISTRY }}
@@ -168,6 +165,11 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
         chmod 600 ~/.ssh/deploy_key
         ssh-keyscan -H ${{ secrets.YC_INSTANCE_IP }} >> ~/.ssh/known_hosts
+        
+        # Pre-create directories with proper permissions
+        echo "Creating required directories on the server..."
+        ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no ${{ secrets.YC_INSTANCE_USER }}@${{ secrets.YC_INSTANCE_IP }} \
+          "sudo mkdir -p /opt/wpg-engine/data /opt/wpg-engine/logs && sudo chmod -R 755 /opt/wpg-engine"
         
         # Copy and execute deployment script on the server
         scp -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no deploy.sh ${{ secrets.YC_INSTANCE_USER }}@${{ secrets.YC_INSTANCE_IP }}:/tmp/
