--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -114,10 +114,15 @@ jobs:
         # Variables
         IMAGE_URL="${{ env.REGISTRY }}/${{ secrets.YC_REGISTRY_ID }}/${{ env.IMAGE_NAME }}:latest"
         CONTAINER_NAME="wpg-engine-bot"
+        DATA_DIR="$HOME/wpg-engine/data"
+        LOGS_DIR="$HOME/wpg-engine/logs"
         
         # Stop and remove existing container
         docker stop $CONTAINER_NAME || true
         docker rm $CONTAINER_NAME || true
+        
+        # Create directories in user home (no sudo needed)
+        mkdir -p "$DATA_DIR" "$LOGS_DIR"
         
         # Login to Yandex Container Registry
         echo "Logging in to Yandex Container Registry..."
@@ -131,8 +136,8 @@ jobs:
         WPGBOT_GID=$(docker run --rm $IMAGE_URL id -g wpgbot 2>/dev/null || echo "999")
         
         echo "Setting permissions for wpgbot user (UID: $WPGBOT_UID, GID: $WPGBOT_GID)"
-        sudo chown -R $WPGBOT_UID:$WPGBOT_GID /opt/wpg-engine/data /opt/wpg-engine/logs
-        sudo chmod -R 755 /opt/wpg-engine/data /opt/wpg-engine/logs
+        sudo chown -R $WPGBOT_UID:$WPGBOT_GID "$DATA_DIR" "$LOGS_DIR"
+        chmod -R 755 "$DATA_DIR" "$LOGS_DIR"
         
         # Run new container
         docker run -d \
@@ -144,8 +149,8 @@ jobs:
           -e AI_DEFAULT_MODEL="${{ secrets.AI_DEFAULT_MODEL || 'deepseek/deepseek-chat-v3-0324' }}" \
           -e DB_URL="sqlite:///./data/wpg_engine.db" \
           -e LOG_LEVEL="INFO" \
-          -v /opt/wpg-engine/data:/app/data \
-          -v /opt/wpg-engine/logs:/app/logs \
+          -v "$DATA_DIR:/app/data" \
+          -v "$LOGS_DIR:/app/logs" \
           $IMAGE_URL
         
         # Clean up old images
@@ -165,11 +170,6 @@ jobs:
         echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/deploy_key
         chmod 600 ~/.ssh/deploy_key
         ssh-keyscan -H ${{ secrets.YC_INSTANCE_IP }} >> ~/.ssh/known_hosts
-        
-        # Pre-create directories with proper permissions
-        echo "Creating required directories on the server..."
-        ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no ${{ secrets.YC_INSTANCE_USER }}@${{ secrets.YC_INSTANCE_IP }} \
-          "sudo mkdir -p /opt/wpg-engine/data /opt/wpg-engine/logs && sudo chmod -R 755 /opt/wpg-engine"
         
         # Copy and execute deployment script on the server
         scp -i ~/.ssh/deploy_key -o StrictHostKeyChecking=no deploy.sh ${{ secrets.YC_INSTANCE_USER }}@${{ secrets.YC_INSTANCE_IP }}:/tmp/
