--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -117,9 +117,9 @@ jobs:
         DATA_DIR="\\\$HOME/wpg-engine/data"
         LOGS_DIR="\\\$HOME/wpg-engine/logs"
         
-        # Stop and remove existing container
-        docker stop \$CONTAINER_NAME || true
-        docker rm \$CONTAINER_NAME || true
+        # Stop and remove existing container (force remove if needed)
+        docker stop \$CONTAINER_NAME 2>/dev/null || true
+        docker rm -f \$CONTAINER_NAME 2>/dev/null || true
         
         # Create directories in user home (no sudo needed)
         mkdir -p "\$DATA_DIR" "\$LOGS_DIR"
