--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,3 +62,7 @@ python_files = ["test_*.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
 addopts = "-v --tb=short"
+filterwarnings = [
+    "ignore::DeprecationWarning:aiosqlite.*",
+    "ignore::RuntimeWarning:sqlalchemy.*",
+]
